--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1233,15 +1233,6 @@ input:checked + .toggle-bg {
 .left-0 {
   left: 0px;
 }
-<<<<<<< HEAD
-.top-0 {
-  top: 0px;
-}
-.right-0 {
-  right: 0px;
-}
-=======
->>>>>>> origin/aungpor
 .right-2\.5 {
   right: 0.625rem;
 }
@@ -1254,15 +1245,12 @@ input:checked + .toggle-bg {
 .bottom-2 {
   bottom: 0.5rem;
 }
-<<<<<<< HEAD
-=======
 .top-0 {
   top: 0px;
 }
 .right-0 {
   right: 0px;
 }
->>>>>>> origin/aungpor
 .bottom-\[60px\] {
   bottom: 60px;
 }
@@ -1284,13 +1272,12 @@ input:checked + .toggle-bg {
 .z-30 {
   z-index: 30;
 }
-.m-8 {
-  margin: 2rem;
-}
 .m-2 {
   margin: 0.5rem;
 }
-<<<<<<< HEAD
+.m-8 {
+  margin: 2rem;
+}
 .m-4 {
   margin: 1rem;
 }
@@ -1299,46 +1286,15 @@ input:checked + .toggle-bg {
 }
 .m-6 {
   margin: 1.5rem;
-}
-.m-0 {
-  margin: 0px;
 }
 .my-20 {
   margin-top: 5rem;
   margin-bottom: 5rem;
-=======
-.m-8 {
-  margin: 2rem;
-}
-.m-4 {
-  margin: 1rem;
-}
-.m-3 {
-  margin: 0.75rem;
-}
-.m-6 {
-  margin: 1.5rem;
->>>>>>> origin/aungpor
 }
 .mx-8 {
   margin-left: 2rem;
   margin-right: 2rem;
 }
-<<<<<<< HEAD
-=======
-.mx-4 {
-  margin-left: 1rem;
-  margin-right: 1rem;
-}
-.mx-auto {
-  margin-left: auto;
-  margin-right: auto;
-}
-.my-20 {
-  margin-top: 5rem;
-  margin-bottom: 5rem;
-}
->>>>>>> origin/aungpor
 .my-6 {
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
@@ -1355,20 +1311,17 @@ input:checked + .toggle-bg {
   margin-left: 1rem;
   margin-right: 1rem;
 }
-<<<<<<< HEAD
-.my-1 {
-  margin-top: 0.25rem;
-  margin-bottom: 0.25rem;
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+.mx-2 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
 }
 .mx-16 {
   margin-left: 4rem;
   margin-right: 4rem;
-}
-=======
->>>>>>> origin/aungpor
-.my-4 {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
 }
 .my-1 {
   margin-top: 0.25rem;
@@ -1383,21 +1336,8 @@ input:checked + .toggle-bg {
 .mt-3 {
   margin-top: 0.75rem;
 }
-<<<<<<< HEAD
 .mr-4 {
   margin-right: 1rem;
-}
-.mb-4 {
-  margin-bottom: 1rem;
-}
-.mt-1 {
-  margin-top: 0.25rem;
-}
-.mt-4 {
-  margin-top: 1rem;
-}
-.ml-4 {
-  margin-left: 1rem;
 }
 .mb-6 {
   margin-bottom: 1.5rem;
@@ -1408,38 +1348,15 @@ input:checked + .toggle-bg {
 .mt-2 {
   margin-top: 0.5rem;
 }
-.mb-2 {
-  margin-bottom: 0.5rem;
-}
-.mr-2 {
-  margin-right: 0.5rem;
-}
-.mr-1 {
-  margin-right: 0.25rem;
-}
-=======
-.mt-6 {
-  margin-top: 1.5rem;
-}
-.mt-2 {
-  margin-top: 0.5rem;
-}
 .mt-4 {
   margin-top: 1rem;
 }
-.mr-2 {
-  margin-right: 0.5rem;
-}
 .mr-1 {
   margin-right: 0.25rem;
 }
-.mr-4 {
-  margin-right: 1rem;
+.mr-2 {
+  margin-right: 0.5rem;
 }
-.mb-6 {
-  margin-bottom: 1.5rem;
-}
->>>>>>> origin/aungpor
 .mb-1 {
   margin-bottom: 0.25rem;
 }
@@ -1449,8 +1366,6 @@ input:checked + .toggle-bg {
 .mt-8 {
   margin-top: 2rem;
 }
-<<<<<<< HEAD
-=======
 .mb-2 {
   margin-bottom: 0.5rem;
 }
@@ -1460,7 +1375,6 @@ input:checked + .toggle-bg {
 .mt-1 {
   margin-top: 0.25rem;
 }
->>>>>>> origin/aungpor
 .ml-2 {
   margin-left: 0.5rem;
 }
@@ -1470,44 +1384,29 @@ input:checked + .toggle-bg {
 .ml-1 {
   margin-left: 0.25rem;
 }
-<<<<<<< HEAD
-=======
 .ml-4 {
   margin-left: 1rem;
 }
->>>>>>> origin/aungpor
 .ml-12 {
   margin-left: 3rem;
 }
 .-mt-px {
   margin-top: -1px;
 }
-<<<<<<< HEAD
-.-mr-2 {
-  margin-right: -0.5rem;
-}
-=======
->>>>>>> origin/aungpor
 .ml-0\.5 {
   margin-left: 0.125rem;
 }
 .ml-0 {
   margin-left: 0px;
 }
-<<<<<<< HEAD
-=======
 .-mr-2 {
   margin-right: -0.5rem;
 }
->>>>>>> origin/aungpor
 .mt-5 {
   margin-top: 1.25rem;
 }
 .mb-10 {
   margin-bottom: 2.5rem;
-}
-.ml-5 {
-  margin-left: 1.25rem;
 }
 .block {
   display: block;
@@ -1536,16 +1435,6 @@ input:checked + .toggle-bg {
 .h-5 {
   height: 1.25rem;
 }
-<<<<<<< HEAD
-.h-20 {
-  height: 5rem;
-}
-.h-6 {
-  height: 1.5rem;
-}
-.h-4 {
-  height: 1rem;
-=======
 .h-6 {
   height: 1.5rem;
 }
@@ -1554,7 +1443,6 @@ input:checked + .toggle-bg {
 }
 .h-20 {
   height: 5rem;
->>>>>>> origin/aungpor
 }
 .h-8 {
   height: 2rem;
@@ -1576,12 +1464,6 @@ input:checked + .toggle-bg {
 }
 .w-full {
   width: 100%;
-<<<<<<< HEAD
-}
-.w-20 {
-  width: 5rem;
-=======
->>>>>>> origin/aungpor
 }
 .w-6 {
   width: 1.5rem;
@@ -1589,20 +1471,20 @@ input:checked + .toggle-bg {
 .w-4 {
   width: 1rem;
 }
-.w-1\/3 {
-  width: 33.333333%;
+.w-20 {
+  width: 5rem;
 }
-<<<<<<< HEAD
-.w-2\/3 {
-  width: 66.666667%;
-}
-=======
->>>>>>> origin/aungpor
 .w-8 {
   width: 2rem;
 }
 .w-auto {
   width: auto;
+}
+.w-1\/3 {
+  width: 33.333333%;
+}
+.w-2\/4 {
+  width: 50%;
 }
 .w-48 {
   width: 12rem;
@@ -1611,12 +1493,6 @@ input:checked + .toggle-bg {
   width: 16rem;
 }
 .w-1\/2 {
-  width: 50%;
-}
-.w-1\/4 {
-  width: 25%;
-}
-.w-2\/4 {
   width: 50%;
 }
 .max-w-7xl {
@@ -1747,27 +1623,16 @@ input:checked + .toggle-bg {
 .justify-items-center {
   justify-items: center;
 }
-<<<<<<< HEAD
-.space-y-6 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
-}
-=======
->>>>>>> origin/aungpor
 .space-y-2 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
-<<<<<<< HEAD
-=======
 .space-y-6 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
 }
->>>>>>> origin/aungpor
 .space-x-8 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(2rem * var(--tw-space-x-reverse));
@@ -1849,57 +1714,18 @@ input:checked + .toggle-bg {
 }
 .border-l-4 {
   border-left-width: 4px;
-<<<<<<< HEAD
-}
-.border-solid {
-  border-style: solid;
-=======
->>>>>>> origin/aungpor
 }
 .border-gray-300 {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
-<<<<<<< HEAD
 .border-gray-200 {
   --tw-border-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
 }
 .border-red-600 {
-=======
-.border-blue-300 {
-  --tw-border-opacity: 1;
-  border-color: rgb(164 202 254 / var(--tw-border-opacity));
-}
-.border-yellow-300 {
->>>>>>> origin/aungpor
   --tw-border-opacity: 1;
   border-color: rgb(224 36 36 / var(--tw-border-opacity));
-}
-.border-transparent {
-  border-color: transparent;
-}
-.border-red-300 {
-  --tw-border-opacity: 1;
-  border-color: rgb(248 180 180 / var(--tw-border-opacity));
-}
-<<<<<<< HEAD
-.border-gray-400 {
-  --tw-border-opacity: 1;
-  border-color: rgb(156 163 175 / var(--tw-border-opacity));
-=======
-.border-gray-200 {
-  --tw-border-opacity: 1;
-  border-color: rgb(229 231 235 / var(--tw-border-opacity));
->>>>>>> origin/aungpor
-}
-.border-red-600 {
-  --tw-border-opacity: 1;
-  border-color: rgb(224 36 36 / var(--tw-border-opacity));
-}
-.border-gray-100 {
-  --tw-border-opacity: 1;
-  border-color: rgb(243 244 246 / var(--tw-border-opacity));
 }
 .border-blue-300 {
   --tw-border-opacity: 1;
@@ -1912,6 +1738,17 @@ input:checked + .toggle-bg {
 .border-\[\#B3BA1E\] {
   --tw-border-opacity: 1;
   border-color: rgb(179 186 30 / var(--tw-border-opacity));
+}
+.border-red-300 {
+  --tw-border-opacity: 1;
+  border-color: rgb(248 180 180 / var(--tw-border-opacity));
+}
+.border-transparent {
+  border-color: transparent;
+}
+.border-gray-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(156 163 175 / var(--tw-border-opacity));
 }
 .border-indigo-400 {
   --tw-border-opacity: 1;
@@ -1949,17 +1786,10 @@ input:checked + .toggle-bg {
   --tw-bg-opacity: 1;
   background-color: rgb(222 247 236 / var(--tw-bg-opacity));
 }
-<<<<<<< HEAD
-.bg-blue-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(225 239 254 / var(--tw-bg-opacity));
-}
 .bg-purple-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(237 235 254 / var(--tw-bg-opacity));
 }
-=======
->>>>>>> origin/aungpor
 .bg-\[\#006C67\] {
   --tw-bg-opacity: 1;
   background-color: rgb(0 108 103 / var(--tw-bg-opacity));
@@ -1968,13 +1798,9 @@ input:checked + .toggle-bg {
   --tw-bg-opacity: 1;
   background-color: rgb(179 186 30 / var(--tw-bg-opacity));
 }
-.bg-gray-100 {
+.bg-gray-800 {
   --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
-}
-.bg-indigo-50 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(240 245 255 / var(--tw-bg-opacity));
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
 .bg-gray-100 {
   --tw-bg-opacity: 1;
@@ -2006,24 +1832,14 @@ input:checked + .toggle-bg {
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
 }
-.bg-clip-padding {
-  background-clip: padding-box;
-}
 .fill-current {
   fill: currentColor;
 }
-<<<<<<< HEAD
-=======
-.p-1 {
-  padding: 0.25rem;
-}
->>>>>>> origin/aungpor
 .p-4 {
   padding: 1rem;
 }
 .p-2\.5 {
   padding: 0.625rem;
-<<<<<<< HEAD
 }
 .p-2 {
   padding: 0.5rem;
@@ -2033,14 +1849,6 @@ input:checked + .toggle-bg {
 }
 .p-1 {
   padding: 0.25rem;
-=======
->>>>>>> origin/aungpor
-}
-.p-2 {
-  padding: 0.5rem;
-}
-.p-6 {
-  padding: 1.5rem;
 }
 .p-3 {
   padding: 0.75rem;
@@ -2057,9 +1865,13 @@ input:checked + .toggle-bg {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
 }
-.px-8 {
-  padding-left: 2rem;
-  padding-right: 2rem;
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 .px-2\.5 {
   padding-left: 0.625rem;
@@ -2089,21 +1901,14 @@ input:checked + .toggle-bg {
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
 .py-2\.5 {
   padding-top: 0.625rem;
   padding-bottom: 0.625rem;
 }
-<<<<<<< HEAD
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-}
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-}
-=======
->>>>>>> origin/aungpor
 .py-12 {
   padding-top: 3rem;
   padding-bottom: 3rem;
@@ -2124,6 +1929,9 @@ input:checked + .toggle-bg {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
 }
+.pr-3 {
+  padding-right: 0.75rem;
+}
 .pt-2 {
   padding-top: 0.5rem;
 }
@@ -2139,19 +1947,11 @@ input:checked + .toggle-bg {
 .pl-8 {
   padding-left: 2rem;
 }
-<<<<<<< HEAD
-.pr-4 {
-  padding-right: 1rem;
-}
-.pl-3 {
-  padding-left: 0.75rem;
-=======
 .pl-3 {
   padding-left: 0.75rem;
 }
 .pl-10 {
   padding-left: 2.5rem;
->>>>>>> origin/aungpor
 }
 .pr-4 {
   padding-right: 1rem;
@@ -2165,12 +1965,6 @@ input:checked + .toggle-bg {
 .pt-1 {
   padding-top: 0.25rem;
 }
-<<<<<<< HEAD
-.pl-10 {
-  padding-left: 2.5rem;
-}
-=======
->>>>>>> origin/aungpor
 .pb-3 {
   padding-bottom: 0.75rem;
 }
@@ -2197,9 +1991,9 @@ input:checked + .toggle-bg {
   font-size: 1.875rem;
   line-height: 2.25rem;
 }
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 .text-xs {
   font-size: 0.75rem;
@@ -2213,13 +2007,6 @@ input:checked + .toggle-bg {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
-<<<<<<< HEAD
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-=======
->>>>>>> origin/aungpor
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
@@ -2227,17 +2014,11 @@ input:checked + .toggle-bg {
 .font-medium {
   font-weight: 500;
 }
-<<<<<<< HEAD
-.font-bold {
-  font-weight: 700;
-}
-=======
->>>>>>> origin/aungpor
 .font-normal {
   font-weight: 400;
 }
-.font-semibold {
-  font-weight: 600;
+.font-bold {
+  font-weight: 700;
 }
 .font-semibold {
   font-weight: 600;
@@ -2285,12 +2066,14 @@ input:checked + .toggle-bg {
   --tw-text-opacity: 1;
   color: rgb(5 122 85 / var(--tw-text-opacity));
 }
+.text-gray-900 {
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity));
+}
 .text-gray-600 {
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity));
 }
-<<<<<<< HEAD
-=======
 .text-gray-800 {
   --tw-text-opacity: 1;
   color: rgb(31 41 55 / var(--tw-text-opacity));
@@ -2311,18 +2094,6 @@ input:checked + .toggle-bg {
   --tw-text-opacity: 1;
   color: rgb(249 128 128 / var(--tw-text-opacity));
 }
->>>>>>> origin/aungpor
-.text-gray-900 {
-  --tw-text-opacity: 1;
-  color: rgb(17 24 39 / var(--tw-text-opacity));
-}
-<<<<<<< HEAD
-.text-gray-800 {
-  --tw-text-opacity: 1;
-  color: rgb(31 41 55 / var(--tw-text-opacity));
-}
-=======
->>>>>>> origin/aungpor
 .text-blue-600 {
   --tw-text-opacity: 1;
   color: rgb(28 100 242 / var(--tw-text-opacity));
@@ -2355,25 +2126,6 @@ input:checked + .toggle-bg {
   --tw-text-opacity: 1;
   color: rgb(81 69 205 / var(--tw-text-opacity));
 }
-<<<<<<< HEAD
-.text-blue-400 {
-  --tw-text-opacity: 1;
-  color: rgb(118 169 250 / var(--tw-text-opacity));
-}
-.text-yellow-400 {
-  --tw-text-opacity: 1;
-  color: rgb(227 160 8 / var(--tw-text-opacity));
-}
-.text-\[\#B3BA1E\] {
-  --tw-text-opacity: 1;
-  color: rgb(179 186 30 / var(--tw-text-opacity));
-}
-.text-red-400 {
-  --tw-text-opacity: 1;
-  color: rgb(249 128 128 / var(--tw-text-opacity));
-}
-=======
->>>>>>> origin/aungpor
 .underline {
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
@@ -2604,32 +2356,19 @@ input:checked + .toggle-bg {
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
 
-.hover\:bg-gray-100:hover {
+.hover\:bg-green-200:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+  background-color: rgb(188 240 218 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-blue-100:hover {
-<<<<<<< HEAD
   --tw-bg-opacity: 1;
   background-color: rgb(225 239 254 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-\[\#B3BA1E\]:hover {
+.hover\:bg-gray-100:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(179 186 30 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-\[\#86932D\]:hover {
-=======
->>>>>>> origin/aungpor
-  --tw-bg-opacity: 1;
-  background-color: rgb(134 147 45 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-gray-50:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-\[\#aeb347\]:hover {
@@ -2637,14 +2376,24 @@ input:checked + .toggle-bg {
   background-color: rgb(174 179 71 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-gray-300:hover {
+.hover\:bg-\[\#B3BA1E\]:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
+  background-color: rgb(179 186 30 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-gray-700:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-gray-300:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(209 213 219 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-\[\#86932D\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(134 147 45 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-gray-50:hover {
@@ -2677,14 +2426,14 @@ input:checked + .toggle-bg {
   color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
-.hover\:text-gray-900:hover {
-  --tw-text-opacity: 1;
-  color: rgb(17 24 39 / var(--tw-text-opacity));
-}
-
 .hover\:text-gray-700:hover {
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
+}
+
+.hover\:text-gray-900:hover {
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity));
 }
 
 .hover\:text-gray-800:hover {
@@ -2707,11 +2456,6 @@ input:checked + .toggle-bg {
           text-decoration-line: underline;
 }
 
-.hover\:decoration-\[\#86932D\]:hover {
-  -webkit-text-decoration-color: #86932D;
-          text-decoration-color: #86932D;
-}
-
 .focus\:z-10:focus {
   z-index: 10;
 }
@@ -2722,14 +2466,11 @@ input:checked + .toggle-bg {
 }
 
 .focus\:border-blue-500:focus {
-<<<<<<< HEAD
   --tw-border-opacity: 1;
   border-color: rgb(63 131 248 / var(--tw-border-opacity));
 }
 
 .focus\:border-indigo-300:focus {
-=======
->>>>>>> origin/aungpor
   --tw-border-opacity: 1;
   border-color: rgb(180 198 252 / var(--tw-border-opacity));
 }
@@ -2737,25 +2478,6 @@ input:checked + .toggle-bg {
 .focus\:border-gray-900:focus {
   --tw-border-opacity: 1;
   border-color: rgb(17 24 39 / var(--tw-border-opacity));
-}
-
-<<<<<<< HEAD
-.focus\:border-indigo-700:focus {
-  --tw-border-opacity: 1;
-  border-color: rgb(81 69 205 / var(--tw-border-opacity));
-}
-
-.focus\:border-gray-300:focus {
-=======
-.focus\:border-indigo-300:focus {
->>>>>>> origin/aungpor
-  --tw-border-opacity: 1;
-  border-color: rgb(209 213 219 / var(--tw-border-opacity));
-}
-
-.focus\:border-blue-600:focus {
-  --tw-border-opacity: 1;
-  border-color: rgb(28 100 242 / var(--tw-border-opacity));
 }
 
 .focus\:border-indigo-700:focus {
@@ -2783,19 +2505,11 @@ input:checked + .toggle-bg {
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }
 
-.focus\:bg-white:focus {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-<<<<<<< HEAD
 .focus\:text-gray-700:focus {
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
 }
 
-=======
->>>>>>> origin/aungpor
 .focus\:text-indigo-800:focus {
   --tw-text-opacity: 1;
   color: rgb(66 56 157 / var(--tw-text-opacity));
@@ -2861,6 +2575,11 @@ input:checked + .toggle-bg {
 .active\:bg-gray-100:active {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+
+.active\:bg-gray-900:active {
+  --tw-bg-opacity: 1;
+  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
 }
 
 .active\:bg-\[\#616A21\]:active {
